test/types/records/lydia/offsetNotRecord-class.good
offsetNotRecord-class.chpl:7: error: Cannot call c_offsetof on type that is not a record
