test/types/records/lydia/offsetNotRecord-class.chpl
use CPtr;
class Foo {
  var x: int;
}


writeln(c_offsetof(Foo, "x"));
